# rayline

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  RELEASING-SIGNING.md  SECURITY.md  TRADEMARK.md  deny.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_report.yml  feature_request.yml  security_report.md
.github/workflows/: ci.yml  release.yml  security.yml
.superpowers/sdd/: task-1-report.md
crates/rayline-adapter/: Cargo.toml
crates/rayline-adapter/src/: lib.rs
crates/rayline-adapter/tests/: it_adapter.rs
crates/rayline-authcache/: Cargo.toml
crates/rayline-authcache/src/: lib.rs
crates/rayline-cli/: Cargo.toml  build.rs
crates/rayline-cli/src/: catalog.rs  claude.rs  claude_daemon.rs  codex.rs  discover.rs  lib.rs  local_model.rs  main.rs  onboarding.rs  providers.rs  router.rs  router_config.rs  status.rs  update.rs
crates/rayline-cli/tests/: it_local_main_e2e.rs
crates/rayline-cli/tests/fixtures/: SHA256SUMS  SHA256SUMS.minisig  SHA256SUMS.tampered  latest.txt.minisig  untrusted_pubkey.txt
crates/rayline-daemon/: Cargo.toml  build.rs
crates/rayline-daemon/src/: main.rs  statusline.rs
crates/rayline-hf/: Cargo.toml
crates/rayline-hf/src/: lib.rs
crates/rayline-injector/: Cargo.toml
crates/rayline-injector/src/: lib.rs
crates/rayline-injector/tests/: it_injector.rs
crates/rayline-llama/: Cargo.toml
crates/rayline-llama/src/: lib.rs
crates/rayline-local-router/: Cargo.toml
crates/rayline-local-router/src/: lib.rs
crates/rayline-local-router/tests/: it_live_streaming.rs  it_mock_upstream.rs
crates/rayline-local-router/tests/fixtures/: openai_text_stream.sse  openai_tool_stream.sse  shapes_png_base64.txt
crates/rayline-metrics/: Cargo.toml
crates/rayline-metrics/src/: lib.rs
crates/rayline-proxy/: Cargo.toml
crates/rayline-proxy/src/: lib.rs
crates/rayline-proxy/tests/: it_claude_live.rs  it_proxy.rs
crates/rayline-proxy/tests/fixtures/: agent-test.meta.json
docs/: acceptance-testing.md  getting-started.md  local-router-claude-acceptance.md  rayline-local-router.md  release.md
docs/superpowers/specs/: 2026-06-22-proxy-metrics-always-on-design.md  2026-06-22-routing-modes-two-axis-redesign.md
examples/: local-router.json  openai-compatible.json  openrouter.json
examples/cloud/python/: README.md  main.py  requirements.txt
examples/cloud/typescript/: README.md  main.ts  package-lock.json  package.json
examples/local/python/: README.md  main.py  requirements.txt
examples/local/typescript/: README.md  main.ts  package-lock.json  package.json
examples/routing-modes/: .gitignore  AL.json  ARC.json  ARCL.json  ARL.json  LA.json  LL.json  LR.json  LRC.json  LRCL.json  LRL.json  RAC.json  RACL.json  RAL.json  README.md  RL-per-type.json  RL.json  RLC-per-type.json  RLC.json  RLCL.json  RLL.json  RR.json  RRCL.json  RRL.json  VERIFY.md  VISUAL-TEST.md  VISUAL-VERIFY.md  visual-demo.sh  visual-test.sh  visual-verify.sh
packaging/homebrew/: README.md  rayline.rb.template
scripts/: install-rayline.ps1  install-rayline.sh
