[workspace]
resolver = "3"
members = [
    "crates/rayline-hf",
    "crates/rayline-metrics",
    "crates/rayline-llama",
    "crates/rayline-local-router",
    "crates/rayline-adapter",
    "crates/rayline-injector",
    "crates/rayline-proxy",
    "crates/rayline-cli",
    "crates/rayline-daemon",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
authors = ["Atlas Futures, Inc."]

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots", "stream"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1"
futures = "0.3"
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"
rcgen = { version = "0.14", default-features = false, features = ["aws_lc_rs", "pem", "x509-parser"] }
rustls = "0.23"
tokio-rustls = "0.26"

[profile.release-small]
inherits = "release"
opt-level = "z"
lto = true
strip = true
codegen-units = 1
