[package]
name = "rayline-adapter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Anthropic-native pass-through proxy to llama-server with usage callback"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
bytes.workspace = true
futures.workspace = true
tokio-stream = "0.1"
rayline-metrics = { path = "../rayline-metrics" }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
