[package]
name = "rayline-authcache"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared auth-header cache for Rayline proxy components"
homepage.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
