[package]
name = "rayline-hf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Hugging Face cache scan + download"
homepage.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
reqwest = { workspace = true, features = ["blocking", "json", "rustls-tls-native-roots", "stream"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
dirs.workspace = true
sha2 = "0.10"
