[package]
name = "rayline-injector"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Reverse proxy that injects x-rayline-local-* headers"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
tokio-stream = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
serde_json.workspace = true
