[package]
name = "rayline-llama"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "llama.cpp llama-server lifecycle (download/spawn/health)"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
reqwest = { workspace = true, features = ["blocking", "json", "rustls-tls-native-roots"] }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
tracing.workspace = true
dirs.workspace = true
rayline-hf = { path = "../rayline-hf" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_SystemInformation",
] }
