[package]
name = "rayline-local-router"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Local-only Rayline static router for Claude Code-compatible traffic"
homepage.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
futures.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream = "0.1"
tracing.workspace = true
rayline-metrics = { path = "../rayline-metrics" }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
