[package]
name = "rayline-proxy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Transparent proxy for Claude Code Rayline routing"
homepage.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-compression = { version = "0.4", features = ["tokio", "gzip", "brotli", "zstd", "deflate"] }
brotli = "8"
bytes.workspace = true
dirs.workspace = true
flate2 = "1"
futures.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
rcgen.workspace = true
reqwest.workspace = true
time.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
tracing.workspace = true
rayline-metrics = { path = "../rayline-metrics" }
rayline-authcache = { path = "../rayline-authcache" }
x509-parser = "0.18"
zstd = "0.13"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["full", "test-util"] }
tracing-subscriber.workspace = true
rayline-adapter = { path = "../rayline-adapter" }
